Set local Storage

--- a/index.html
+++ b/index.html
@@ -140,14 +140,17 @@
     <div class="save-popup-text">
         <button class="close-save">X</button>
         <h2>Give a name to your palette</h2>
-        <input type="text" required>
+        <input type="text" required autofocus>
         <button class="save-genrate">Save</button>
     </div>
 </div>
 
 <div class="library-popup">
+  
     <div class="library-popup-text">
         <button class="library-close">X</button>
+        <button class="library-clear">Clear</button>
+        <h2>Pick up your Palette</h2>
     </div>
 </div>
 
